--- a/thesis.html
+++ b/thesis.html
@@ -15,20 +15,20 @@
 
         <h1>All Publications</h1>
 
-        <h3>[1] Sun, Y.H., Luo, H. & Lee, K. (2022). A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment. Behavior Research Methods. 
+        <p>[1] Sun, Y.H., Luo, H. & Lee, K. (2022). A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment. Behavior Research Methods. 
             <a href="https://doi.org/10.3758/s13428-021-01771-7">https://doi.org/10.3758/s13428-021-01771-7</a>
-        </h3>
-        <h3>[2] Sun, Y.H., Liu, Q., Lee, N.Y., Li, X., & Lee, K. (2022). A novel machine learning approach to shorten depression risk assessment for convenient uses. Journal of Affective Disorders, 312, 275–291.
+        </p>
+        <p>[2] Sun, Y.H., Liu, Q., Lee, N.Y., Li, X., & Lee, K. (2022). A novel machine learning approach to shorten depression risk assessment for convenient uses. Journal of Affective Disorders, 312, 275–291.
             <a href="https://doi.org/10.1016/j.jad.2022.06.035">https://doi.org/10.1016/j.jad.2022.06.035</a>
-        </h3>
-        <h3>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
+        </p>
+        <p>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
             <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
-        </h3>
-        <h3>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
-        </h3>
-        <h3>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
+        </p>
+        <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
+        </p>
+        <p>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
             (<a href="files/poster-childbmi.pdf">link</a>)
-        </h3>
+        </p>
         <br><br>
 
 
@@ -36,7 +36,7 @@
         <h3>A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment</h3>
         <h3>Supervisor: <a
                 href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>,
-            Ontario Institute for Studies in Education, University of Toronto</h3>
+            Department of Applied Psychology and Human Development, University of Toronto</h3>
         <h3>September 2020 — April 2021</h3>
         <br>
 
@@ -52,13 +52,14 @@
         <p>This paper has been published in the
             <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a> journal.
         </p>
+        <br><br>
 
 
         <h1>Masters Thesis</h1>
         <h3>Rapid Assessment of Psychiatric Disorder Risks Using Machine Learning</h3>
         <h3>Supervisor: <a
                 href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>,
-            Ontario Institute for Studies in Education, University of Toronto</h3>
+            Department of Applied Psychology and Human Development, University of Toronto</h3>
         <h3>September 2022 — April 2023</h3>
         <br>
 
@@ -68,6 +69,7 @@
             and its most commonly administered version, the MMPI-2, contains 567 true/false questions (Drayton, 2009). However, 
             completing the test is exhausting and time consuming due to the large number of questions. This makes the test difficult 
             and inconvenient to be taken on a regular basis or to be administered on a large scale. </p>
+        <br><br>
     
 
     </body>
