--- a/experience.html
+++ b/experience.html
@@ -16,6 +16,22 @@
 		<h1>Professional Experience Summary</h1><br>
 
 		<figure class="item">
+			<a href="thesis.html" target="_blank"><img src="pics/anxiety.png"
+					alt="portfolio item" width=400 height=250></a>
+			<figcaption class="desc">
+				<p>
+					<font color="white"><strong>Research & Publications</strong></font>
+				</p>
+				<p>
+					<font color="white">My research work and publications</font>
+				</p>
+				<p>
+					<font color="white">Kang Lee's Development Lab, University of Toronto</font>
+				</p>
+			</figcaption>
+		</figure>
+
+		<figure class="item">
 			<a href="pey.html" target="_blank"><img src="pics/nuralogix.png"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
@@ -37,22 +53,6 @@
 				</p>
 				<p>
 					<font color="white">Data Science Research Intern</font>
-				</p>
-			</figcaption>
-		</figure>
-
-		<figure class="item">
-			<a href="thesis.html" target="_blank"><img src="pics/anxiety.png"
-					alt="portfolio item" width=400 height=250></a>
-			<figcaption class="desc">
-				<p>
-					<font color="white"><strong>Undergraduate Thesis</strong></font>
-				</p>
-				<p>
-					<font color="white">Machine Learning Approaches for Rapid Assessment of Anxiety</font>
-				</p>
-				<p>
-					<font color="white">Supervisor: Kang Lee, Ontario Institute for Studies in Education, University of Toronto</font>
 				</p>
 			</figcaption>
 		</figure>
