--- a/overview.html
+++ b/overview.html
@@ -148,11 +148,10 @@
             improve people's lives through technology.
         </p>
 
-        <p>I am currently working at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Engineer, where my main responsibility is to 
-            develop smart data pipelines for machine learning. Previously, 
-            from May 2019 to August 2020, I completed my <a
-                href="https://engineeringcareers.utoronto.ca/work-experience-programs/professional-experience-year-co-op-program-pey-co-op/">professional
-                experience year (PEY)</a> co-op there as a Data Science Software Developer, where my work was centered around developing a Python
+        <p>I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer, where my main responsibility is to 
+            develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
+            from May 2019 to January 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
+            where my work was centered around developing a Python
             API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud
             service. I am also doing significant work in data science and data engineering, 
             such as building a Jenkins pipeline to standarize data pre-processing, and implementing
@@ -168,12 +167,13 @@
             <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a>.
             </p>
 
-        <p>In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
+        <p>I am actively doing research on the side, as showcased by my publications below. 
+            In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
             attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and
             mentor younger peers.</p>
 
-        <p>I am open to any full-time opportunities from 2022 onwards in software development / engineering,
-            data science / engineering, or machine learning engineering. You can reach me by
+        <p>I am open to any full-time opportunities from 2023 onwards in software development & engineering,
+            data science & data engineering, or machine learning engineering. You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
                 href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
             <br><br><br>
@@ -494,14 +494,13 @@
         <a href="thesis.html" target="_blank"><img src="pics/anxiety.png" alt="portfolio item" width=400 height=250></a>
         <figcaption class="desc">
             <p>
-                <font color="white"><strong>Undergraduate Thesis</strong></font>
+                <font color="white"><strong>Research & Publications</strong></font>
             </p>
             <p>
-                <font color="white">Machine Learning Approaches for Rapid Assessment of Anxiety</font>
+                <font color="white">My research work and publications</font>
             </p>
             <p>
-                <font color="white">Prof. Kang Lee, Ontario Institute for Studies in Education, University of Toronto
-                </font>
+                <font color="white">Kang Lee's Development Lab, University of Toronto</font>
             </p>
         </figcaption>
     </figure>
