add nafld draft

--- a/overview.html
+++ b/overview.html
@@ -190,10 +190,11 @@
         <p>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
             <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
         </p>
-        <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
+        <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K. (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
+            (<a href="files/NAFLD-Manuscript-Lancet.pdf">submission</a>)
         </p>
         <p>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
-            (<a href="files/poster-childbmi.pdf">link</a>)
+            (<a href="files/poster-childbmi.pdf">poster</a>)
         </p>
         <br><br><br>
     
