--- a/thesis.html
+++ b/thesis.html
@@ -25,10 +25,10 @@
             <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
         </p>
         <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K. (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
-            (<a href="files/NAFLD-Manuscript-Lancet.pdf">submission</a>)
+            (<a href="files/NAFLD-Manuscript-Lancet.pdf">Submission</a>)
         </p>
         <p>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
-            (<a href="files/poster-childbmi.pdf">poster</a>)
+            (<a href="files/poster-childbmi.pdf">Poster</a>)
         </p>
         <br><br>
 
