--- a/index.html
+++ b/index.html
@@ -16,12 +16,11 @@
             <h1>Bill Sun</h1>
             <h5>Machine Learning and Software Engineer</h5>
             <p>
-                Hi! I am a recent graduate from <a
-                    href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">Machine
-                    Intelligence</a>
-                @ University of Toronto. I've interned and am currently working at <a
-                    href="https://www.kinaxis.com/en">Kinaxis</a>
-                as a Machine Learning Engineer. This is a showcase of my skills, projects, and insights. Enjoy!
+                Hi! I am currently a Machine Learning Engineer at <a
+                href="https://www.kinaxis.com/en">Kinaxis</a>. I graduated from <a
+                    href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
+                    Engineering Science - Machine Intelligence</a>
+                @ University of Toronto. This is a showcase of my skills, projects, research, and insights. Enjoy!
             </p>
             <ul>
                 <li><a href="https://www.linkedin.com/in/bill-yuan-hong-sun/"><i class="fab fa-linkedin"
