--- a/overview.html
+++ b/overview.html
@@ -140,7 +140,7 @@
 
         <h1 class="titleabout">About Me</h1><br>
 
-        <p>Hello! I’m Bill, a recent <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
+        <p>Hello! I’m Bill (Yuan Hong) Sun, a recent <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
             graduate from the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                 Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data,
@@ -190,12 +190,13 @@
         <p>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
             <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
         </p>
-        <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K. (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. The Lancet Gastroenterology & Hepatology.
+        <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K. (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. Metabolism.
             (<a href="files/NAFLD-Manuscript-Lancet.pdf">Submission</a>)
         </p>
         <p>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
             (<a href="files/poster-childbmi.pdf">Poster</a>)
         </p>
+        <p><a href="https://www.researchgate.net/profile/Yuan-Hong-Sun">ResearchGate</a></p>
         <br><br><br>
     
 
