update overview page

--- a/overview.html
+++ b/overview.html
@@ -140,42 +140,31 @@
 
         <h1 class="titleabout">About Me</h1><br>
 
-        <p>Hello! I’m Bill (Yuan Hong) Sun, a recent <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
+        <p>Hello! I'm Bill (Yuan Hong) Sun, an <a href="https://engsci.utoronto.ca/program/what-is-engsci/">Engineering Science</a> 
             graduate from the University of Toronto, majoring in
             <a href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                 Machine Learning and Artificial Intelligence</a>. I am enthusiastic about using software, big data,
-            machine learning, and the engineering approach to solve challenging problems, and helping to 
+            machine learning, and the engineering approach to solve challenging problems across different disciplines, and helping to 
             improve people's lives through technology.
         </p>
 
         <p>I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer, where my main responsibility is to 
             develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
             from May 2019 to January 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
-            where my work was centered around developing a Python
-            API client for simple access of the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud
-            service. I am also doing significant work in data science and data engineering, 
-            such as building a Jenkins pipeline to standarize data pre-processing, and implementing
-            machine learning and numerical models. In addition, I've worked on numerous internal software, web tools, and microservices.</p>
+            working closely with the <a>Anura</a> app and the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud
+            service.</p>
 
-        <p>In my senior year, I completed a <a href="capstone.html">capstone project</a> with Public Health Ontario, where my team and I developed 
-            a <a href="https://vaccine-sentiment-pho.herokuapp.com/dashboard/">web-based dashboard</a> that displays real-time statistics on 
-            the vaccine sentiment of the latest social media posts, using a sentiment analysis machine learning model. I also completed a 
-            <a href="thesis.html">thesis</a> 
-            with Prof. <a href="https://www.oise.utoronto.ca/aphd/Home/Faculty_and_Staff/Faculty/4836/Kang_Lee.html">Kang Lee</a>, on the topic of
-            using machine learning approaches for shortening long assessments while maintaining its performance. The paper, titled "A Novel Approach for 
-            Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment", is pending publication in 
-            <a href="https://www.springer.com/journal/13428">Behavior Research Methods</a>.
-            </p>
-
-        <p>I am actively doing research on the side, as showcased by my publications below. 
+        <p>I am also actively doing research at University of Toronto, as showcased by my publications below. 
             In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
             attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and
             mentor younger peers.</p>
 
-        <p>I am open to any full-time opportunities from 2023 onwards in software development & engineering,
-            data science & data engineering, or machine learning engineering. You can reach me by
+        <p>You can reach me by
             <a href="mailto:billyuanhong.sun@mail.utoronto.ca">email</a> or <a
-                href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>.
+                href="https://www.linkedin.com/in/bill-yuan-hong-sun/">LinkedIn</a>. 
+            You can also read about my engineering insights and reflections in my <a href="blogs.html"
+                    style="color: #ffbfbf; padding: 0; text-decoration: none;">blog</a>.
+                </p>
             <br><br><br>
 
 
@@ -334,9 +323,9 @@
                 </td>
 
                 <td>
-                    <p><b>Event Organization</b></p>
+                    <p><b>Machine Learning & Deep Learning</b></p>
                     <div class="container">
-                        <div class="skills good"></div>
+                        <div class="skills fluent"></div>
                     </div>
                 </td>
             </tr>
@@ -359,9 +348,9 @@
                 </td>
 
                 <td>
-                    <p><b>Teamwork</b></p>
+                    <p><b>Natural Language Processing</b></p>
                     <div class="container">
-                        <div class="skills fluent"></div>
+                        <div class="skills good"></div>
                     </div>
                 </td>
             </tr>
@@ -384,9 +373,9 @@
                 </td>
 
                 <td>
-                    <p><b>Project Management</b></p>
+                    <p><b>Data Mining and Analysis</b></p>
                     <div class="container">
-                        <div class="skills good"></div>
+                        <div class="skills fluent"></div>
                     </div>
                 </td>
             </tr>
@@ -540,52 +529,9 @@
 
 </div>
 
-<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:500px;">
 
-    <h2 id="summary" style="color:#FFFFFF; text-align:center;">Personal Statement</h2>
-    <h3>Why Engineering?</h3>
-    <p>I have been interested in engineering at a young age. I have been fascinated by machines, electronics, and
-        transportation equipment. I also tried to copy my father’s technical drawings for fun. When I was taught visual
-        arts, I learned how to represent and express my ideas in a unique manner. After I moved to Canada in 8th grade,
-        and
-        went through the struggles of being an immigrant, I realized the importance of helping out people in need.
-        Incorporating my strengths in math and sciences, as well as my interest in design and research, I decided to
-        peruse
-        in engineering sciences.</p>
 
-    <h3>My Missions</h3>
-    <p>As a student engineer with a diverse background, I envision to make a difference in the community, and in the
-        world
-        we live in. Through my various involvements such as Engineers Without Borders, I hope to reach out towards the
-        community and to those in need by applying my engineering and design skills. More importantly, I help younger
-        students develop engineering design skills, so they can continue the task of making change. Doing that, in my
-        opinion, is not only reaching out to these students and to the community, but it is also my mission as a student
-        engineer. I believe that the core value of being an engineer is to improve people’s lives and make a difference
-        in
-        the world.</p>
-
-    <h3>My Values</h3>
-    <p>In engineering design, I value <i>usability</i> and <i>accessibility</i> since they allows everyone, especially
-        those in need, to use the products with convenience. For usability I value having a proven, functional design
-        over a
-        theoretical and unproven one. As for accessibility, I have witnessed people with deficiencies or disabilities
-        try to
-        use certain things and struggle, so I believe it is important to take consideration of all kinds of people with
-        various needs when it comes to engineering design. In the design process, one of my strengths is making
-        prototypes,
-        both building it and making concept drawings. I also like to develop testing methods to select the best designs,
-        as
-        showcased in my design projects from Praxis I and II. You can read more about my engineering design process
-        here.
-    </p>
-
-    <p>Through the next 3 years, I am continuing my development as a professional engineer, and working to improve my
-        design abilities such as creativity in thinking, as well as learning more about the technical aspects of design.
-    </p>
-    <br>
-
-    <p>You can also read about my engineering insights and reflections in my <a href="blogs.html"
-            style="color: #ffbfbf; padding: 0; text-decoration: none;">blog</a>.</p>
+    
     <br><br>
 
 </div>
