--- a/overview.html
+++ b/overview.html
@@ -148,15 +148,16 @@
             improve people's lives through technology.
         </p>
 
-        <p>I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer, where my main responsibility is to 
+        <p>I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer, where my main focus is to 
             develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
-            from May 2019 to January 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
-            working closely with the <a>Anura</a> app and the <a href="https://www.deepaffex.ai/en/engine.html">DeepAffex (DFX)</a> cloud
-            service.</p>
+            from 2019 to 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
+            working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app and the 
+            <a href="https://www.deepaffex.ai">DeepAffex (DFX)</a> cloud service.</p>
 
-        <p>I am also actively doing research at University of Toronto, as showcased by my publications below. 
+        <p>I have numerous software <a href="projects.html">projects</a>, and I am also doing research at University of Toronto, 
+            as showcased by my publications below. 
             In my spare time, I am involved in numerous <a href="clubs.html">extracurricular activities</a>. I actively
-            attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photograph weather and nature, and
+            attend technical meetups and participate in hackathons. I also like to workout, play sports, travel, photography, volunteer, and
             mentor younger peers.</p>
 
         <p>You can reach me by
@@ -168,24 +169,8 @@
             <br><br><br>
 
 
-        <h2 id="pubs" style="text-align:center;">Publications</h2>
-
-        <p>[1] Sun, Y.H., Luo, H. & Lee, K. (2022). A Novel Approach for Developing Efficient and Convenient Short Assessments to Approximate a Long Assessment. Behavior Research Methods. 
-            <a href="https://doi.org/10.3758/s13428-021-01771-7">https://doi.org/10.3758/s13428-021-01771-7</a>
-        </p>
-        <p>[2] Sun, Y.H., Liu, Q., Lee, N.Y., Li, X., & Lee, K. (2022). A novel machine learning approach to shorten depression risk assessment for convenient uses. Journal of Affective Disorders, 312, 275–291.
-            <a href="https://doi.org/10.1016/j.jad.2022.06.035">https://doi.org/10.1016/j.jad.2022.06.035</a>
-        </p>
-        <p>[3] Liu, S., Sun, Y.H., Waese-Perlman, A.A., Lee, N.Y., Zhang, H., Lee, K. (2022). Symptom Based Models of COVID-19 Infection Using AI. In: Lidströmer, N., Eldar, Y.C. (eds) Artificial Intelligence in Covid-19. Springer, Cham. 
-            <a href="https://doi.org/10.1007/978-3-031-08506-2_8">https://doi.org/10.1007/978-3-031-08506-2_8</a>
-        </p>
-        <p>[4] Zhou, W., Sun, Y.H., Huang, W., Liu, Q., Lee, N.Y., Yasin, Y., Chen, Z., Wang, J., Cai, P., Feng, Z.P. & Lee, K. (In press). Risk prediction of fatty liver disease by machine learning using physical and blood biomarkers independent of liver biopsy. Metabolism.
-            (<a href="files/NAFLD-Manuscript-Lancet.pdf">Submission</a>)
-        </p>
-        <p>[5] Yasin, Y., Sun, Y.H., & Lee, K. (2022). A machine learning approach for predicting children's future BMI. Canadian Developmental Psychology Conference 2022.
-            (<a href="files/poster-childbmi.pdf">Poster</a>)
-        </p>
-        <p><a href="https://www.researchgate.net/profile/Yuan-Hong-Sun">ResearchGate</a></p>
+        <h2 id="pubs" style="text-align:center;">All Publications</h2>
+        <publications-list></publications-list>
         <br><br><br>
     
 
@@ -318,7 +303,7 @@
                     <div class="tooltip"><i class="fab fa-docker fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">Docker</span></div>
                     <div class="container">
-                        <div class="skills familiar"></div>
+                        <div class="skills good"></div>
                     </div>
                 </td>
 
@@ -341,9 +326,9 @@
 
                 <td>
                     <div class="tooltip"><i class="fab fa-atlassian fa-3x" id="skillicon"></i>
-                        <span class="tooltiptext">Atlassian toolkit</span></div>
+                        <span class="tooltiptext">Atlassian toolkit (Jira, Confluence, etc.)</span></div>
                     <div class="container">
-                        <div class="skills good"></div>
+                        <div class="skills fluent"></div>
                     </div>
                 </td>
 
@@ -412,7 +397,7 @@
                     <div class="tooltip"><i class="fab fa-r-project fa-3x" id="skillicon"></i>
                         <span class="tooltiptext">R</span></div>
                     <div class="container">
-                        <div class="skills good"></div>
+                        <div class="skills familiar"></div>
                     </div>
                 </td>
 
@@ -529,11 +514,29 @@
 
 </div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:300px;">
+    <h2 id="exp" style="text-align:center;">Awards</h2>
 
+    <p>2022 &emsp; Canadian Psychology Association (CPA) Research Award</p>
+    <p>2021 &emsp; Dean's Honours List</p>
+    <p>2017 &emsp; Natural Sciences and Engineering Research Council (NSERC) - Undergraduate Research Award</p>
+    <p>2016 &emsp; University of Toronto - Delta Tau Delta Scholarship</p>
+    <p>2016 &emsp; University of Toronto - President's Entrance Scholarship</p>
+    <p>2016 &emsp; Toronto District Secondary Schools Athletic Association (TDSSAA) Swimming Champions</p>
 
-    
-    <br><br>
+</div>
 
+<div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:300px;">
+    <h2 id="exp" style="text-align:center;">Certifications</h2>
+
+    <p>2022 &emsp; Amazon Web Services (AWS) - Certified Cloud Practitioner</p>
+    <p>2020 &emsp; Toastmasters International - Competent Communicator</p>
+    <p>2016 &emsp; Lifesaving Society - National Lifeguard</p>
+    <p>2016 &emsp; St. John's Ambulance - Standard First Aid CPR Level-C & AED</p>
+
+</div>
+
+<br><br>
 </div>
 
 </body>
