update website Dec 30 2022

--- a/overview.html
+++ b/overview.html
@@ -531,7 +531,7 @@
 
     <p>2022 &emsp; Amazon Web Services (AWS) - Certified Cloud Practitioner</p>
     <p>2020 &emsp; Toastmasters International - Competent Communicator</p>
-    <p>2016 &emsp; Lifesaving Society - National Lifeguard</p>
+    <p>2016 &emsp; Canadian Lifesaving Society - National Lifeguard</p>
     <p>2016 &emsp; St. John's Ambulance - Standard First Aid CPR Level-C & AED</p>
 
 </div>
