--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <h1>Bill Sun</h1>
             <h5>Machine Learning and Software Engineer</h5>
             <p>
-                Hi! I am currently a Machine Learning Engineer at <a
-                href="https://www.kinaxis.com/en">Kinaxis</a>. I graduated from <a
+                Hi! I am a Machine Learning and Software Engineer. I graduated from <a
                     href="https://engsci.utoronto.ca/explore_our_program/majors/machine-intelligence/">
                     Engineering Science - Machine Intelligence</a>
                 @ University of Toronto. This is a showcase of my skills, projects, research, and insights. Enjoy!
