remove blog link

--- a/blogs.html
+++ b/blogs.html
@@ -101,11 +101,11 @@
                 <li><a href="#20160929">Sep. 29, 2016: Praxis I Lecture Extension - Use Wikipedia for Research?</a></li>
             </div>
 
-            <div class="card">
+            <!-- <div class="card">
                 <h2>Medium Blog</h2>
                 <p>In collaboration with some engineering classmates, I recently started a blog on Medium. Check it out 
                     <a href="https://thewanderingengineer.medium.com/?source=linkShare-aebc68ada3ae-1625691948">here</a>!</p>
-            </div>
+            </div> -->
         </div>
 
 
