--- a/overview.html
+++ b/overview.html
@@ -147,8 +147,9 @@
             machine learning, and the engineering approach to solve challenging problems across different disciplines, and helping to 
             improve people's lives through technology.
         </p>
+        <!--I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer-->
 
-        <p>I am currently working at <a href="https://www.kinaxis.com/en">Kinaxis</a> as a Machine Learning Engineer, where my main focus is to 
+        <p>I am currently working as a Machine Learning Engineer, where my main focus is to 
             develop machine learning modules and pipelines for retail and shipment forecasting solutions. Previously, 
             from 2019 to 2022, I worked at <a href="https://www.nuralogix.ai/">Nuralogix</a> as a Data Science Software Developer,
             working closely with the <a href="https://www.nuralogix.ai/anura/">Anura</a> personal health monitoring app and the 
