--- a/experience.html
+++ b/experience.html
@@ -16,7 +16,7 @@
 		<h1>Professional Experience Summary</h1><br>
 
 		<figure class="item">
-			<a href="thesis.html" target="_blank"><img src="pics/anxiety.png"
+			<a href="research.html" target="_blank"><img src="pics/anxiety.png"
 					alt="portfolio item" width=400 height=250></a>
 			<figcaption class="desc">
 				<p>
@@ -45,7 +45,7 @@
 		</figure>
 
 		<figure class="item">
-			<a href="research.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400
+			<a href="transit.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400
 					height=250></a>
 			<figcaption class="desc">
 				<p>
