--- a/overview.html
+++ b/overview.html
@@ -468,7 +468,7 @@
     </figure>
 
     <figure class="item">
-        <a href="thesis.html" target="_blank"><img src="pics/anxiety.png" alt="portfolio item" width=400 height=250></a>
+        <a href="research.html" target="_blank"><img src="pics/anxiety.png" alt="portfolio item" width=400 height=250></a>
         <figcaption class="desc">
             <p>
                 <font color="white"><strong>Research & Publications</strong></font>
@@ -483,7 +483,7 @@
     </figure>
 
     <figure class="item">
-        <a href="research.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400
+        <a href="transit.html" target="_blank"><img src="pics/transit2.png" alt="portfolio item" width=400
                 height=250></a>
         <figcaption class="desc">
             <p>
