--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 </li>
             </ul>
             <button><a href="overview.html">About</a></button>
-            <button><a href="thesis.html">Research</a></button>
+            <button><a href="research.html">Research</a></button>
             <button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
             <button><a href="blogs.html">Blog</a></button>
         </div>
