--- a/about.html
+++ b/about.html
@@ -530,10 +530,12 @@
 <div style="padding: 0% 10% 0% 10%; margin-top:50px; min-height:300px;">
     <h2 id="exp" style="text-align:center;">Certifications</h2>
 
+    <p>2023 &emsp; Scrum Alliance - Certified Scrum Master</p>
     <p>2022 &emsp; Amazon Web Services (AWS) - Certified Cloud Practitioner</p>
     <p>2020 &emsp; Toastmasters International - Competent Communicator</p>
     <p>2016 &emsp; Canadian Lifesaving Society - National Lifeguard</p>
     <p>2016 &emsp; St. John's Ambulance - Standard First Aid CPR Level-C & AED</p>
+    <p>2015 &emsp; Ontario Lifesaving Society - Swim Instructor</p>
 
 </div>
 
