--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <li><a href="https://github.com/billyhsun"><i class="fab fa-github-square" aria-hidden="true"></i></a>
                 </li>
             </ul>
-            <button><a href="overview.html">About</a></button>
+            <button><a href="about.html">About</a></button>
             <button><a href="research.html">Research</a></button>
             <button><a href="files/Bill-Yuan-Hong-Sun-Resume-1.pdf">Résumé</a></button>
             <button><a href="blogs.html">Blog</a></button>
